clusters/linkerd_simple_chain/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sfc-ingress
  namespace: sfc
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "SFC-chain: 1";
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: vnf-1-svc
      port:
        number: 80
